--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,119 @@
-* {
-    margin: 0;
-    padding: 0;
-    }
- 
+
 body{
-    background-color: f4f4f4;
-    color:#555;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.5em;
-    margin:0;
-}
+  font-family: Tahoma, Geneva, sans-serif;
+  font-size: 16px;
+  line-height: 1,5em;
+  margin: 0;
+  padding: 0;
+  background-color: #EAE7DC;
+  }
 
-p{
-    padding-top: 10px;
-}
-
+/*global*/
 
 .container{
-    width:80%;
-    margin:auto;
-    padding: 25px;
-    overflow: hidden;
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
 }
 
-#mainHeader{
-    background-color: blueviolet;
-    color:#fff;
+ul{
+  margin:0;
+  padding:0;
 }
 
-#navbar{
-    background-color: #333;
-    color:#fff;
+.button_1{
+  height: 38px;
+  background:#E85A4F;
+  border: none;
+  color: #fff;
+  padding: 0 20px;
 }
 
-#navbar ul{
-padding:0;
-list-style: none;
+
+/*header*/
+
+header{
+  background: #D8C3A5;
+  color: #fff;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: #E98074 3px solid  ;
 }
 
-#navbar li{
-    display: inline;
+header a{
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
 }
 
-#navbar a{
-    color:white;
-    padding-right: 10px;
+header li{
+  float: left;
+  display: inline;
+  padding: 0 20px;
 }
+
+header #branding {
+  float: left;
+}
+
+header #branding h1{
+  margin: 0;
+}
+
+header nav{
+  float: right;
+  padding-top: 10px;
+}
+
+header .highlight, header .current a{
+  color: #E98074;
+  font-weight: bold;
+}
+
+header a:hover{
+  color: #fff;
+  font-weight: bold;
+}
+
+/*showcase*/
 
 #showcase{
-    background-image:url("../images/image1.png");
-    min-height: 300px;
-    background-position: center;
-    margin-bottom: 30px;
-    text-align: left;
+  min-height: 400px;
+  background:url(../images/cupcake-min.jpg) no-repeat;
+  background-position: center;
+  text-align: center;
+  color: #fff;
+  back
 }
 
 #showcase h1{
-    width: 75%;
-    color:#fff;
-    font-size: 30px;
-    line-height: 1.1em;
-    padding: 50px 0;
-  
+  margin-top: 100px;
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
+#showcase p{
+  font-size:20px;
+}
+
+#newsletter{
+  padding: 15px;
+  color: white;
+  background: #E98074;
+}
+
+#newsletter h1{
+  float: left;
+}
+
+#newsletter form{
+  float: right;
+  margin-top: 25px;
+}
+
+#newsletter input[type="email"]{
+  padding: 4px;
+  height: 25px;
+  width: 250px;
 }
